trunk/Archive2/19/4d3a665a261cab/output
main.cpp:22:18: error: missing 'typename' prior to dependent type name 'CurryType<double, int>::type'
    /*typename*/ CurryType<double, int>::type AnOverriddenDefault;
                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                 typename 
main.cpp:28:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
main.cpp:27:36: warning: unused variable 'a' [-Wunused-variable]
FinalUserDefinedType<bool, double> a;
                                   ^
2 warnings and 1 error generated.
